# CMakeList.txt: Question04 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

project ("Question04")

# 将源代码添加到此项目的可执行文件。
add_executable (Question04 "Question04.cpp" "Question04.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Question04 PROPERTY CXX_STANDARD 20)
endif()

# TODO: 如有需要，请添加测试并安装目标。
